--- a/test.ini
+++ b/test.ini
@@ -1,14 +1,14 @@
 [ristmikud]
-0 = 5, 6	; [Identifikaator] = [x-koordinaat], [y-koordinaat]
-1 = 7, 8
-2 = 100, 8
+A = 5, 6	; [Identifikaator] = [x-koordinaat], [y-koordinaat]
+B = 7, 8
+C = 100, 8
 
 [teed]
-0 = 0, 1	; [Tee identifikaator] = [1. ristmiku id], [2. ristmiku id]
-1 = 1, 2
-2 = 0, 2
+0 = a, b	; [Tee identifikaator] = [1. ristmiku id], [2. ristmiku id]
+1 = b, c
+2 = a, c
 
 [peatused]
-p0 = 50, 40	; [Peatuse identifikaator] = [x-koordinaat], [y-koordinaat]
-p1 = 100, 200
-p2 = 10, -2
+P0 = 50, 40	; [Peatuse identifikaator] = [x-koordinaat], [y-koordinaat]
+P1 = 100, 200
+P2 = 10, -2
