--- a/test2.ini
+++ b/test2.ini
@@ -3,16 +3,34 @@ a = 5, 6
 b = 29.2553722214658,64.515891416208
 c = 100, 8
 d = 50, 20
+e = 50, 15
+f = 110, 70
+g = 190, 35
 
 [teed]
-0 = a, b
-1 = b, c, 10
-2 = a, c, 3
+vabaduse-pst = a, b
+1 = b, c, 6
+2 = f, g
 3 = a, d
 4 = b, d
+5 = d, e
+6 = e, c, 1
+8 = b, f
+9 = g, c
+10 = f, c
+11 = a, e, 0.5
 
 [peatused]
-p0 = 54.5554845533187,34.8341953844253
-p1 = 23.1776916054341,9.5340830525725
-p2 = 12.2404667869099,52.7146449709238
-p3 = 99.0338473821395,17.4944311381585
+kodu = 54.5554845533187,34.8341953844253
+k-rauta = 23.1776916054341,9.5340830525725
+prisma = 12.2404667869099,52.7146449709238
+ehituse-abc = 100,50
+bauhof = 50, 100
+bauhaus = 40, 0
+comarket = 120, 100
+costco = 80,-10
+coop = 170, 5
+rimi = 69, 40
+maxima = 150.0,40.0
+selver = 99.0338473821395,17.4944311381585
+#maksimarket = 130, 37
