--- a/test3.ini
+++ b/test3.ini
@@ -43,24 +43,24 @@ b = l, a
 c = n, m
 d = n, o
 e = o, g
-f1 = l, n
-g1 = a, v
-h1 = u, v
-i1 = t, u
-j1 = t, s
-k1 = s, r
-l1 = r, q
-m1 = q, p
-n1 = p, o
-p1 = p, n
-q1 = u, w
-r1 = w, g
+#f1 = l, n
+g1 = a, v, 3
+h1 = u, v, 3
+i1 = t, u, 3
+j1 = t, s, 3
+k1 = s, r, 3
+l1 = r, q, 3
+m1 = q, p, 3
+n1 = p, o, 3
+p1 = p, n, 3
+q1 = u, w, 3
+r1 = w, g, 3
 
 [peatused]
 kodu = 119, 32.2
 rimi = -51.4, 10.2
 pood = -100.1, -31.8
-kontor = -44, -29.7
+kontor = -34, -29.7
 suvila = 25.4, -50.9
 rand = 121, -13.1
 selver = 145.1, -20.1
@@ -69,5 +69,6 @@ prisma = 204.2, -48
 tallegg = 189.2, 33.1
 estonia = 226.6, 52.6
 kodu2 = 53.7, -37.6
+kodu3 = -71.8, -84.2
+#kodu4 = 40, -10
 
-#-7.18, -8.42
