Talutavam kaart, teede nimed

--- a/test2.ini
+++ b/test2.ini
@@ -12,13 +12,13 @@ vabaduse-pst = a, b
 1 = b, c, 6
 2 = f, g
 3 = a, d
-4 = b, d
-5 = d, e
+parnu-mnt = b, d
+poik = d, e
 6 = e, c, 1
 8 = b, f
 9 = g, c
 10 = f, c
-11 = a, e, 0.5
+estonia-pst = a, e, 0.5
 
 [peatused]
 kodu = 54.5554845533187,34.8341953844253
@@ -33,4 +33,4 @@ coop = 170, 5
 rimi = 69, 40
 maxima = 150.0,40.0
 selver = 99.0338473821395,17.4944311381585
-#maksimarket = 130, 37
+maksimarket = 130, 37
