--- a/test1.ini
+++ b/test1.ini
@@ -12,7 +12,7 @@ D = 120, 30
 4 = b, d
 
 [peatused]
-P0 = 50, 40	; [Peatuse identifikaator] = [x-koordinaat], [y-koordinaat]
+P0 : "50, 40"	; [Peatuse identifikaator] = [x-koordinaat], [y-koordinaat]
 P1 = 10, -2
 P2 = 105, 25
 P3 = 100, 20
